# vision-rag-claims

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
data/policies/: auto_policy_master.md  claims_handbook.md  glass_endorsement.md  tire_wheel_endorsement.md
models/: dcn_plus_cfg.py
src/vision_rag_claims/: config.py  schemas.py
src/vision_rag_claims/agent/: graph.py  nodes.py  severity.py  state.py
src/vision_rag_claims/rag/: ingestion.py  retriever.py
src/vision_rag_claims/vision/: detector.py  visualizer.py
