[project]
name = "vision-rag-claims"
version = "0.1.0"
description = "Vision-RAG Insurance Claim Triage Agent"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy<2",
    "openmim>=0.3.9",
    "setuptools>=70.2.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
