[project]
name = "vision-rag-claims"
version = "0.1.0"
description = "Vision-RAG Insurance Claim Triage Agent"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "openmim>=0.3.9",
    "protobuf<4",
    "pydantic-settings>=2.14.1",
    "setuptools>=70.2.0",
    "streamlit>=1.58.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_rag_claims"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
